# local-secrets

./: Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml  release.yml
src/: envfile.rs  main.rs  store.rs
templates/: help.html  index.html
