[package]
name = "local-secrets"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
axum = { version = "0.8", features = ["json", "form"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
