[package]
name = "local-secrets"
version = "0.1.0"
edition = "2024"
description = "A local-only secret and shared-file server for development across multiple git worktrees"
repository = "https://github.com/cjrh/local-secrets"
readme = "README.md"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
axum = { version = "0.8", features = ["json", "form"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]
